--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "newsletter-signup",
   "version": "1.0.0",
-  "description": "This is email newletter\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[Cs\u001b[C\u001b[C\u001b[D\u001b[Dletter signup ,one page project.\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001bproject.",
+  "description": "This is email newletter signup ,one page project.",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
